--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <meta property="og:title" content="Dịch vụ sửa chữa, bảo hành tủ lạnh Hitachi">
     <meta property="og:description" content="Chuyên sửa chữa và bảo hành tủ lạnh Hitachi tại nhà, phục vụ tận nơi, nhanh chóng và chuyên nghiệp.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:url" content="https://dienmayhanoi123.click">
+    <meta property="og:image" content="https://dienmayhanoi123.click/assets/img/picture/image.png">
+    <meta property="og:image" content="https://dienmayhanoi123.click/assets/img/image.png">
+    <meta property="og:image" content="https://dienmayhanoi123.click/assets/img/picture/banner/banner-hitachi.png">
     <title>Điện máy Hà Nội</title>
     <link rel="stylesheet" href="assets/css/library/library-responsive.css" />
     <link rel="stylesheet" href="assets/css/main/base.css" />
