--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
                   <li class="top__menu-item">
                     <a href="#position">Liên Hệ</a>
                   </li>
+
+                  <li class="top__menu-item">
+                    <a href="lg.html">Bảo hành máy giặt LG</a>
+                  </li>
                 </ul>
               </div>
 
@@ -96,6 +100,10 @@
                   </div>
                   <li class="menu__list-item back">
                     <label for="check">Quay lại</label>
+                  </li>
+
+                  <li class="menu__list-item back">
+                    <a href="lg.html">Bảo hành máy giặt LG</a>
                   </li>
                 </ul>
               </div>
