--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
                   <li class="top__menu-item">
                     <a href="lg.html">Bảo hành máy giặt LG</a>
                   </li>
+
+                  <li class="top__menu-item">
+                    <a href="electrolux.html">Bảo hành máy giặt Electrolux</a>
+                  </li>
                 </ul>
               </div>
 
@@ -104,6 +108,10 @@
 
                   <li class="menu__list-item back">
                     <a href="lg.html">Bảo hành máy giặt LG</a>
+                  </li>
+
+                  <li class="menu__list-item back">
+                    <a href="lg.html">Bảo hành máy giặt Electrolux</a>
                   </li>
                 </ul>
               </div>
