change phone number

--- a/lg.html
+++ b/lg.html
@@ -377,7 +377,7 @@
 
                 <br>
 
-                <span class="text-danger font-weight-bold">HOTLINE: 0974505838</span>
+                <span class="text-danger font-weight-bold">HOTLINE: 08.1800.9318</span>
             </h3>
 
             <p>
@@ -429,7 +429,7 @@
                 Giờ thì người tiêu dùng không còn phải lo ngại gì nữa vì đã có Trung tâm bảo hành và sửa chữa máy giặt
                 LG tại Hà Nội phục vụ bạn và đứng ra cam kết về chất lượng,
                 để quý khách luôn yên tâm với quyết định của mình mỗi khi có nhu cầu. Và hãy gọi về cho chúng tôi theo
-                số tổng đài sau <strong>0974505838</strong> (Tổng đài mở 24/7).
+                số tổng đài sau <strong>08.1800.9318</strong> (Tổng đài mở 24/7).
             </p>
             <div class="text-center mt-5">
                 <img src="https://ntrthanh.github.io/bao-hanh-dien-may-ha-noi/static/img/logo/tu-lanh/Pasted%20image%20(10).png"
@@ -492,7 +492,7 @@
 
             <p>
                 Với dịch sửa máy giặt tại nhà mà Trung tâm bảo hành và sửa chữa máy giặt LG tại Hà Nội cung cấp.
-                Bạn chỉ cần gọi <strong>0824448111 – 0963990033</strong> và chúng tôi đến tận nơi để sửa chữa mà không
+                Bạn chỉ cần gọi <strong>08.1800.9318</strong> và chúng tôi đến tận nơi để sửa chữa mà không
                 phải đem sản phẩm đến trung tâm.
             </p>
 
@@ -550,7 +550,7 @@
             </p>
 
             <p class="h4 text-danger font-weight-bold">
-                Hotline: 0974505838
+                Hotline: 08.1800.9318
             </p>
         </div>
 
@@ -565,15 +565,15 @@
                 <div class="phone-vr">
                     <div class="phone-vr-circle-fill"></div>
                     <div class="phone-vr-img-circle">
-                        <a href="tel:0974505838">
+                        <a href="tel:0818009318">
                             <i class="fas fa-phone fa-xl phone-icon-shake" style="color: white;"></i>
                         </a>
                     </div>
                 </div>
             </div>
             <div class="phone-bar">
-                <a href="tel:0974505838">
-                    <span class="text-phone">0974505838</span>
+                <a href="tel:0818009318">
+                    <span class="text-phone">08.1800.9318</span>
                 </a>
             </div>
             <!-- End Phone -->
