--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
                 </li>
 
                 <li class="menu__list-item back">
-                  <a href="lg.html">Bảo hành máy giặt Electrolux</a>
+                  <a href="electrolux.html">Bảo hành máy giặt Electrolux</a>
                 </li>
               </ul>
             </div>
@@ -512,7 +512,7 @@
               <p class="container__content-paragraph container__content-paragraph-slogan">
                 Chuyên nghiệp - Uy tín - Giá cạnh tranh
               </p>
-0974505838
+
               <p class="container__content-paragraph">
                 Đội ngũ kỹ thuật viên tay nghề cao, kinh nghiệm sửa tủ lạnh
                 Hitachi tại Hà Nội, chuyên bảo hành và thay thế linh kiện
